Fix xload crashes if the window is wider than 2048 pixels

https://bugs.freedesktop.org/show_bug.cgi?id=96670

Signed-off-by: Alan Coopersmith <alan.coopersmith@oracle.com>
Reviewed-by: Matthieu Herrb <matthieu@herrb.eu>
Tested-by: Keith Packard <keithp@keithp.com>